<resources>
    <string name="app_name">zeplinLogin</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome,\nsign up now.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="sign_up">Sign UP</string>
    <string name="allready">ALLREADY HAVE AN ACCOUNT? LOG IN!</string>
</resources>